- jsteng, littlewens: mute packet support, chat room list clear bugfix.
- anoxemian: (partial?) kRO/PK server support.
- doenet: improved mon_control.txt, randomWalk and lockMap
  fixes/improvements.
- BotMan: server details for pRO.
- anu: add storage opening timeout, teleportAuto_dropTarget
- juifeng: NPC talk timeout fix when using "d#" talk code
- isieo: attackComboSlot bugfix


** INCOMPATIBLE CHANGES **:
- Tools.dll is obsolete! Delete it!
- The skill numbers listed in 'skills' have changed! They are now stable,
  so for example 'Heal' will always be skill #28 no matter what character
  you are playing, even if you equip accessories that grant skills.
  If you previously made aliases for manually triggering skills, you will
  have to edit them to use the new skill numbers.
- All server-specific information is now stored in servers.txt. The
  master_* config options are now obsolete.


New features:
- HUGE performance gains in portal compilation. It's now 70% faster
  compared to 1.4.x.
- You can now configure Kore to never attack certain monsters, even when
  they attack you. In mon_control.txt, set the flag to -1. Example:
  Matyr -1 0 0
- useSelfSkill, useSelfItem and partySkill now also support the
  _monsters config option, just like attackSkillSlot.
  This example uses Pneuma only when Raydric Archer attacks:
  useSelf_skill_6 Pneuma
  ...
  useSelf_skill_6_monsters Raydric Archer
  ...
- Priority attacks for non-aggressive monsters are now supported.
- You can set Kore to avoid/prefer walking through certain maps
  (see control/routeweights.txt for configuration).
- Support for advanced 2-2 skills.
- If you are granted use of a temporary skill (e.g. Yggdrasil Leaf,
  Abracadabra), you can use the sl/sm/sp/ss commands to cast it using the
  number shown in the "Permitted to use" message. Example:

  > ss 290
  Permitted to use Defender (257), level 5
  You use Abracadabra on yourself: Lv 10
  > ss 257
  You use Defender on yourself: Lv 5